<resources>
    <string name="app_name">calculator_homework</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_plus">+</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiplication">*</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_division">/</string>
    <string name="equals">=</string>
    <string name="TextView_test">Введите значения</string>
    <string name="remove_sign">удалить знак (test)</string>
    <string name="clear">сброс значений</string>
</resources>