<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="@dimen/padding_for_base"
    tools:context="ui.MainActivity">


    <TextView
        android:id="@+id/result_window"
        style="@style/result_window"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textView_height"
        android:gravity="bottom|end"
        android:hint="@string/TextView_test" />

    <!-- Выбрал то, что практичнее для задания -->
    <GridLayout
        style="@style/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_last_figure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/remove_sign"
            android:textSize="@dimen/buttons_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/clear"
            android:textSize="@dimen/buttons_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_multiplication" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_hz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/button_division" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num_final_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/buttons_margin"
            android:text="@string/equals" />

    </GridLayout>


</LinearLayout>